--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>React App</title>
+    <title>Court Manager V1.2</title>
+    <link rel="icon" href="%PUBLIC_URL%/CM_icon.png" />
   </head>
   <body>
     <!-- React의 App.js가 여기에 렌더링됩니다 -->
