--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Court Manager V1.2</title>
+    <title>V1.3 Court Manager</title>
     <link rel="icon" href="%PUBLIC_URL%/CM_icon.png" />
   </head>
   <body>
