Title: Modifying progress of changing and fixing bugs     1. Player's the number of games and status in the list will be changed after confirmation     2. Fixing changing players on courts bugs by confirmation button

--- a/court-manager/public/index.html
+++ b/court-manager/public/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Court Manager V1.2</title>
+    <title>V1.3 Court Manager</title>
     <link rel="icon" href="%PUBLIC_URL%/CM_icon.png" />
   </head>
   <body>
